# slicer_spect_recon

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  README.md  User_Manual.md
.github/workflows/: draft-pdf.yml
SPECTRecon/: CMakeLists.txt  SPECTRecon.py
SPECTRecon/Logic/: AdvancedPSF.py  CMakeLists.txt  MetadataUtils.py  SPECTReconLogic.py  VolumeUtils.py  VtkkmrmlUtils.py
SPECTRecon/Resources/: algorithmTestSettings.json  psfMeta.json  sample_data.txt
SPECTRecon/Resources/Data/PSF_models/: params_440keV_GIHEGP_256shift_sparse_DW_pyrex66_1DR_bkg_amplitude.pt  params_440keV_GIHEGP_256shift_sparse_DW_pyrex66_1DR_bkg_sigma.pt  params_440keV_GIHEGP_256shift_sparse_DW_pyrex66_1DR_gauss_amplitude.pt  params_440keV_GIHEGP_256shift_sparse_DW_pyrex66_1DR_gauss_sigma.pt  params_440keV_GIHEGP_256shift_sparse_DW_pyrex66_1DR_tail_amplitude.pt  params_440keV_GIHEGP_256shift_sparse_DW_pyrex66_1DR_tail_kernel.pt  params_440keV_GIHEGP_256shift_sparse_DW_pyrex66_1DR_tail_sigma.pt  params_440keV_SYHE_256shift_sparse_DW_pyrex66_1DR_bkg_amplitude.pt  params_440keV_SYHE_256shift_sparse_DW_pyrex66_1DR_bkg_sigma.pt  params_440keV_SYHE_256shift_sparse_DW_pyrex66_1DR_gauss_amplitude.pt  params_440keV_SYHE_256shift_sparse_DW_pyrex66_1DR_gauss_sigma.pt  params_440keV_SYHE_256shift_sparse_DW_pyrex66_1DR_tail_amplitude.pt  params_440keV_SYHE_256shift_sparse_DW_pyrex66_1DR_tail_kernel.pt  params_440keV_SYHE_256shift_sparse_DW_pyrex66_1DR_tail_sigma.pt
SPECTRecon/Resources/UI/: SPECTRecon.ui
SPECTRecon/Testing/Python/: reconstruction.py  simind_to_dicom.py
SlicerSPECTRecon/: CMakeLists.txt  SlicerSPECTRecon.py
SlicerSPECTRecon/Logic/: Algorithms.py  CMakeLists.txt  Callbacks.py  MetadataUtils.py  Priors.py  SimindToDicom.py  SlicerSPECTReconLogic.py  SlicerSPECTReconTest.py  VolumeUtils.py  VtkkmrmlUtils.py  algorithms.py  dicomvalues.py  getmetadatautils.py  likelihood.py  priors.py  reconstructSimindTest.py  simindToDicom.py  simindToDicomConverterTest.py  systemMatrix.py  testutils_builder.py  transforms.py  volumeutils.py  vtkkmrmlutils.py
SlicerSPECTRecon/Resources/: algorithmTestSettings.json  psfMeta.json  sampleDataMetaData.json  sample_data.txt
SlicerSPECTRecon/Resources/DICOM/: ct_manifest.txt
SlicerSPECTRecon/Resources/DICOM/CT/: CTACLBONE2.5mmTomoCT_H_1001_CT001_anon.dcm  CTACLBONE2.5mmTomoCT_H_1001_CT002_anon.dcm  CTACLBONE2.5mmTomoCT_H_1001_CT003_anon.dcm  CTACLBONE2.5mmTomoCT_H_1001_CT004_anon.dcm  CTACLBONE2.5mmTomoCT_H_1001_CT005_anon.dcm  CTACLBONE2.5mmTomoCT_H_1001_CT006_anon.dcm  CTACLBONE2.5mmTomoCT_H_1001_CT007_anon.dcm  CTACLBONE2.5mmTomoCT_H_1001_CT008_anon.dcm  CTACLBONE2.5mmTomoCT_H_1001_CT009_anon.dcm  CTACLBONE2.5mmTomoCT_H_1001_CT010_anon.dcm  CTACLBONE2.5mmTomoCT_H_1001_CT011_anon.dcm  CTACLBONE2.5mmTomoCT_H_1001_CT012_anon.dcm  CTACLBONE2.5mmTomoCT_H_1001_CT013_anon.dcm  CTACLBONE2.5mmTomoCT_H_1001_CT014_anon.dcm  CTACLBONE2.5mmTomoCT_H_1001_CT015_anon.dcm  CTACLBONE2.5mmTomoCT_H_1001_CT016_anon.dcm  CTACLBONE2.5mmTomoCT_H_1001_CT017_anon.dcm  CTACLBONE2.5mmTomoCT_H_1001_CT018_anon.dcm  CTACLBONE2.5mmTomoCT_H_1001_CT019_anon.dcm  CTACLBONE2.5mmTomoCT_H_1001_CT020_anon.dcm  CTACLBONE2.5mmTomoCT_H_1001_CT021_anon.dcm  CTACLBONE2.5mmTomoCT_H_1001_CT022_anon.dcm  CTACLBONE2.5mmTomoCT_H_1001_CT023_anon.dcm  CTACLBONE2.5mmTomoCT_H_1001_CT024_anon.dcm  CTACLBONE2.5mmTomoCT_H_1001_CT025_anon.dcm  CTACLBONE2.5mmTomoCT_H_1001_CT026_anon.dcm  CTACLBONE2.5mmTomoCT_H_1001_CT027_anon.dcm  CTACLBONE2.5mmTomoCT_H_1001_CT028_anon.dcm  CTACLBONE2.5mmTomoCT_H_1001_CT029_anon.dcm  CTACLBONE2.5mmTomoCT_H_1001_CT030_anon.dcm  CTACLBONE2.5mmTomoCT_H_1001_CT031_anon.dcm  CTACLBONE2.5mmTomoCT_H_1001_CT032_anon.dcm  CTACLBONE2.5mmTomoCT_H_1001_CT033_anon.dcm  CTACLBONE2.5mmTomoCT_H_1001_CT034_anon.dcm  CTACLBONE2.5mmTomoCT_H_1001_CT035_anon.dcm  CTACLBONE2.5mmTomoCT_H_1001_CT036_anon.dcm  CTACLBONE2.5mmTomoCT_H_1001_CT037_anon.dcm  CTACLBONE2.5mmTomoCT_H_1001_CT038_anon.dcm  CTACLBONE2.5mmTomoCT_H_1001_CT039_anon.dcm  CTACLBONE2.5mmTomoCT_H_1001_CT040_anon.dcm  (+263 more)
SlicerSPECTRecon/Resources/Data/PSF_models/: 440keV_GIHEGP_256shift_sparse_DW_pyrex66_1DR.pkl  440keV_SYHE_256shift_sparse_DW_pyrex66_1DR.pkl
SlicerSPECTRecon/Resources/UI/: SlicerSPECTRecon.ui
SlicerSPECTRecon/Testing/Python/: reconstruction.py  simind_to_dicom.py  utils.py
paper/: compile.sh  paper.bib  paper.md
pytomography/: CMakeLists.txt  pytomography.py
pytomography/Resources/UI/: original_ui_file.ui  pytomography.py  pytomography.ui  pytomographyui.py
